# crypto_tracker

./: .env  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  tasks.py  views.py
api/migrations/: 0001_initial.py  0002_alter_cryptocurrency_change_and_more.py
crypto_tracker/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
