[tool.poetry]
name = "crypto-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
amqp = "^5.2.0"
beautifulsoup4 = "^4.12.3"
celery = "^5.4.0"
django = "^5.1"
djangorestframework = "^3.15.2"
kombu = "^5.4.0"
prompt-toolkit = "^3.0.47"
python-dateutil = "^2.9.0.post0"
six = "^1.16.0"
soupsieve = "^2.5"
sqlparse = "^0.5.1"
vine = "^5.1.0"
wcwidth = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
